[metadata]
name = a10-ansible-docs
summary = Autodoc generator for A10 AXAPI Collection
author = A10 Networks
author-email = opensource@a10networks.com
home-page = https://github.com/a10networks/a10-ansible-docs
description-file =
    README.md
long_description_content_type = text/markdown
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    a10_ansible_docs

[wheel]
universal = 1

[entry_points]
console_scripts =
    migrate_rst = a10_ansible_docs.rst_copier:main
